--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,4 +8,6 @@ python-dateutil==2.8.2
 PyMySQL==1.1.0
 cryptography>=41.0.0
 # mysqlclient==2.2.0  # Nécessite des outils de compilation C++ sur Windows
+whitenoise>=6.7.0
+dj-database-url>=2.2.0
 
