--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "buildCommand": "cd backend && python manage.py collectstatic --noinput",
   "builds": [
     {
-      "src": "backend/wsgi.py",
+      "src": "backend/manage.py",
       "use": "@vercel/python",
       "config": {
         "maxLambdaSize": "50mb",
