--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "buildCommand": "cd backend && python manage.py collectstatic --noinput",
   "builds": [
     {
-      "src": "backend/manage.py",
+      "src": "api/index.py",
       "use": "@vercel/python",
       "config": {
         "maxLambdaSize": "50mb",
@@ -17,6 +17,6 @@
   ],
   "routes": [
     { "src": "/static/(.*)", "dest": "frontend/staticfiles/$1" },
-    { "src": "/(.*)", "dest": "backend/manage.py" }
+    { "src": "/(.*)", "dest": "api/index.py" }
   ]
 }
