--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,17 @@
   "version": 2,
   "installCommand": "pip install -r backend/requirements.txt",
   "buildCommand": "cd backend && python manage.py collectstatic --noinput",
-  "builds": [
-    {
-      "src": "api/index.py",
-      "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "50mb",
-        "includeFiles": [
-          "backend/**",
-          "frontend/**"
-        ]
-      }
+  "functions": {
+    "api/index.py": {
+      "runtime": "@vercel/python",
+      "maxDuration": 30,
+      "memory": 1024,
+      "includeFiles": [
+        "backend/**",
+        "frontend/**"
+      ]
     }
-  ],
+  },
   "routes": [
     { "src": "/static/(.*)", "dest": "frontend/staticfiles/$1" },
     { "src": "/(.*)", "dest": "api/index.py" }
