--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "installCommand": "pip install -r backend/requirements.txt",
+  "installCommand": "pip install -r requirements.txt",
   "buildCommand": "cd backend && python manage.py collectstatic --noinput",
   "routes": [
     { "src": "/static/(.*)", "dest": "frontend/staticfiles/$1" },
