--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,4 +10,5 @@ cryptography>=41.0.0
 # mysqlclient==2.2.0  # Nécessite des outils de compilation C++ sur Windows
 whitenoise>=6.7.0
 dj-database-url>=2.2.0
+gunicorn>=21.2.0
 
