--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,9 @@
-Django==4.2.7
+Django>=5.2.8
 Pillow>=10.2.0
 reportlab==4.0.7
 qrcode==7.4.2
-django-crispy-forms==2.1
-crispy-bootstrap5==0.7
+django-crispy-forms>=2.5
+crispy-bootstrap5>=2025.6
 python-dateutil==2.8.2
 PyMySQL==1.1.0
 cryptography>=41.0.0
