--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,6 +4,7 @@ nixPkgs = ["python311", "pip"]
 [phases.install]
 cmds = [
     "cd backend",
+    "pip install --upgrade pip",
     "pip install -r requirements.txt",
     "python manage.py collectstatic --noinput"
 ]
