--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,20 +5,10 @@ qrcode==7.4.2
 django-crispy-forms>=2.5
 crispy-bootstrap5>=2025.6
 python-dateutil==2.8.2
-# PostgreSQL (pour Railway)
-psycopg2-binary>=2.9.9
-# PyMySQL==1.1.0  # Remplacé par psycopg2-binary pour PostgreSQL
+PyMySQL==1.1.0
 cryptography>=41.0.0
+# mysqlclient==2.2.0  # Nécessite des outils de compilation C++ sur Windows
 whitenoise>=6.7.0
 dj-database-url>=2.2.0
 gunicorn>=21.2.0
-# Cloudinary pour stockage des médias
-cloudinary>=1.36.0
-django-cloudinary-storage>=0.3.0
-# Resend pour emails
-resend>=0.6.0
-# Variables d'environnement
-python-dotenv>=1.0.0
-# Pour télécharger les PDFs depuis Cloudinary
-requests>=2.31.0
 
