--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
-# Requirements pour Vercel
-# Ce fichier pointe vers backend/requirements.txt
-# Vercel utilisera automatiquement backend/requirements.txt si présent
+Django==4.2.7
+Pillow>=10.2.0
+reportlab==4.0.7
+qrcode==7.4.2
+django-crispy-forms==2.1
+crispy-bootstrap5==0.7
+python-dateutil==2.8.2
+PyMySQL==1.1.0
+cryptography>=41.0.0
+whitenoise>=6.7.0
+dj-database-url>=2.2.0
+gunicorn>=21.2.0
 
-# Copie des dépendances principales
--r backend/requirements.txt
